WIP log-file, authorization bug, cypress tests, swagger, store, readme [WIP #185219294]
